[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/boss.gd" type="Script" id=1]
[ext_resource path="res://Scripts/color.shader" type="Shader" id=2]
[ext_resource path="res://Sprites/turrel_pedestal.png" type="Texture" id=3]
[ext_resource path="res://Sprites/glow.png" type="Texture" id=4]
[ext_resource path="res://Sprites/boss_body.png" type="Texture" id=5]
[ext_resource path="res://Sprites/boss_gun.png" type="Texture" id=6]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 2 )
shader_param/k = null
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 2 )
shader_param/k = null
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 2 )
shader_param/k = null
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=4]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.196146, 1.31951, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="ShaderMaterial" id=5]
shader = ExtResource( 2 )
shader_param/k = null
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=6]
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 0.196146, 1.31951, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=7]
radius = 37.0321

[node name="boss" type="KinematicBody2D" groups=[
"unit",
]]
collision_layer = 40
collision_mask = 0
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
material = SubResource( 1 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )
offset = Vector2( 8, -8 )

[node name="glow" type="Sprite" parent="sprite"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="gun" type="Position2D" parent="."]

[node name="sprite" type="Sprite" parent="gun"]
material = SubResource( 2 )
rotation = -1.5708
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )
offset = Vector2( 8, -8 )

[node name="glow" type="Sprite" parent="gun/sprite"]
modulate = Color( 0, 0, 0, 1 )
show_behind_parent = true
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="gun1" type="Sprite" parent="gun/sprite"]
editor/display_folded = true
material = SubResource( 3 )
texture = ExtResource( 6 )
offset = Vector2( 120, -8 )
region_enabled = true
region_rect = Rect2( 0, 0, 256, 512 )

[node name="anim" type="AnimationPlayer" parent="gun/sprite/gun1"]
anims/shoot = SubResource( 4 )

[node name="gun2" type="Sprite" parent="gun/sprite"]
material = SubResource( 5 )
texture = ExtResource( 6 )
offset = Vector2( -104, -8 )
region_enabled = true
region_rect = Rect2( 256, 0, 256, 512 )

[node name="anim" type="AnimationPlayer" parent="gun/sprite/gun2"]
anims/shoot = SubResource( 6 )

[node name="shoot_points" type="Node2D" parent="gun"]
editor/display_folded = true

[node name="p1" type="Position2D" parent="gun/shoot_points"]
position = Vector2( 74.8104, 72.937 )

[node name="p2" type="Position2D" parent="gun/shoot_points"]
position = Vector2( 76.6875, -72.0434 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
